force-app/main/default/objects/FulfillmentOrderLineItem/fields/Accession_ID__c.field-meta.xml
<CustomField>
    <fullName>Accession_ID__c</fullName>
    <label>Accession ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>