force-app/main/default/objects/FulfillmentOrderLineItem/fields/AccountID__c.field-meta.xml
<CustomField>
    <fullName>AccountID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account_ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fulfillment Order Products</relationshipLabel>
    <relationshipName>Fulfillment_Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>