force-app/main/default/objects/FulfillmentOrderLineItem/fields/Activation_Code__c.field-meta.xml
<CustomField>
    <fullName>Activation_Code__c</fullName>
    <label>Kit Activation Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>