force-app/main/default/objects/FulfillmentOrderLineItem/fields/Activation_Questions_And_Answers__c.field-meta.xml
<CustomField>
    <fullName>Activation_Questions_And_Answers__c</fullName>
    <label>Activation Questions And Answers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>