force-app/main/default/objects/FulfillmentOrderLineItem/fields/AttestationJSON__c.field-meta.xml
<CustomField>
    <fullName>AttestationJSON__c</fullName>
    <label>Attestation JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>