force-app/main/default/objects/FulfillmentOrderLineItem/fields/Date_of_Collection__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Collection__c</fullName>
    <label>Date of Collection</label>
    <type>Date</type>
</CustomField>