force-app/main/default/objects/FulfillmentOrderLineItem/fields/Display_Status__c.field-meta.xml
<CustomField>
    <fullName>Display_Status__c</fullName>
    <formula>if( ((TEXT(Status__c) = &apos;Results Ready&apos; || TEXT(Status__c) = &apos;TNP&apos;)) &amp;&amp; FulfillmentOrder.Record_Type_Name__c =&apos;InPerson&apos; &amp;&amp; TEXT(FulfillmentOrder.Status)=&apos;Results Ready&apos;, &apos;Results Ready&apos; ,&apos;In Progress&apos;
    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display Status</label>
    <type>Text</type>
</CustomField>