force-app/main/default/objects/FulfillmentOrderLineItem/fields/DNA_Genotek_Id__c.field-meta.xml
<CustomField>
    <fullName>DNA_Genotek_Id__c</fullName>
    <label>DNA Genotek Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>