force-app/main/default/objects/FulfillmentOrderLineItem/fields/Eligible_to_Expire__c.field-meta.xml
<CustomField>
    <fullName>Eligible_to_Expire__c</fullName>
    <formula>AND( NOT(ISBLANK(Kit_Expiration_Date__c)) ,TODAY()&gt;  Kit_Expiration_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eligible to Expire?</label>
    <type>Checkbox</type>
</CustomField>