force-app/main/default/objects/FulfillmentOrderLineItem/fields/Fulfilled_To_Email__c.field-meta.xml
<CustomField>
    <fullName>Fulfilled_To_Email__c</fullName>
    <formula>FulfillmentOrder.FulfilledToEmailAddress</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fulfilled To Email</label>
    <type>Text</type>
</CustomField>