force-app/main/default/objects/FulfillmentOrderLineItem/fields/Is_Covid_Flu_Test__c.field-meta.xml
<CustomField>
    <fullName>Is_Covid_Flu_Test__c</fullName>
    <formula>OrderItem.Product2.Is_Covid_Flu_Test__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Covid &amp; Flu Test?</label>
    <type>Checkbox</type>
</CustomField>