force-app/main/default/objects/FulfillmentOrderLineItem/fields/Is_Gifted__c.field-meta.xml
<CustomField>
    <fullName>Is_Gifted__c</fullName>
    <formula>Customer_Id__c!=null &amp;&amp;
Customer_Id__c!=OrderItemSummary.customerID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Gifted?</label>
    <type>Checkbox</type>
</CustomField>