force-app/main/default/objects/FulfillmentOrderLineItem/fields/Is_Registered__c.field-meta.xml
<CustomField>
    <fullName>Is_Registered__c</fullName>
    <formula>IF( Quantity ==  Registered_Quantity__c , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Registered</label>
    <type>Checkbox</type>
</CustomField>