force-app/main/default/objects/FulfillmentOrderLineItem/fields/Is_Service__c.field-meta.xml
<CustomField>
    <fullName>Is_Service__c</fullName>
    <formula>OrderItemSummary.Is_Service__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is_Service</label>
    <type>Checkbox</type>
</CustomField>