force-app/main/default/objects/FulfillmentOrderLineItem/fields/Kit_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Kit_Expiration_Date__c</fullName>
    <description>Mule soft update the kit expiration date at the Shipment level, once it is updated at the shipment level OMS internal logic will update at the Fulfillment line level.

Note: Temporarily created as text field and down the line this field is change to formula field</description>
    <label>Kit Expiration Date</label>
    <type>Date</type>
</CustomField>