force-app/main/default/objects/FulfillmentOrderLineItem/fields/Lab_Response__c.field-meta.xml
<CustomField>
    <fullName>Lab_Response__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lab Response</label>
    <referenceTo>Lab_Response__c</referenceTo>
    <relationshipLabel>Fulfillment Order Products</relationshipLabel>
    <relationshipName>Fulfillment_Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>