force-app/main/default/objects/FulfillmentOrderLineItem/fields/OrderSummaryId__c.field-meta.xml
<CustomField>
    <fullName>OrderSummaryId__c</fullName>
    <formula>CASESAFEID(FulfillmentOrder.OrderSummaryId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OrderSummaryId</label>
    <type>Text</type>
</CustomField>