force-app/main/default/objects/FulfillmentOrderLineItem/fields/PerformingSite__c.field-meta.xml
<CustomField>
    <fullName>PerformingSite__c</fullName>
    <label>Performing Site</label>
    <length>50</length>
    <type>Text</type>
</CustomField>