force-app/main/default/objects/FulfillmentOrderLineItem/fields/PurchaseOverride__c.field-meta.xml
<CustomField>
    <fullName>PurchaseOverride__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Purchase Override?</label>
    <type>Checkbox</type>
</CustomField>