force-app/main/default/objects/FulfillmentOrderLineItem/fields/Registered_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Registered_Quantity__c</fullName>
    <label>Registered Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>