force-app/main/default/objects/FulfillmentOrderLineItem/fields/Resulting_Required__c.field-meta.xml
<CustomField>
    <fullName>Resulting_Required__c</fullName>
    <formula>OrderItemSummary.resultingRequired__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resulting Required</label>
    <type>Checkbox</type>
</CustomField>