force-app/main/default/objects/FulfillmentOrderLineItem/fields/Results_Ready__c.field-meta.xml
<CustomField>
    <fullName>Results_Ready__c</fullName>
    <formula>OR(
    AND(
        TEXT(Status__c) = &apos;Results Ready&apos;,
        Test_Type__c != &apos;PA&apos;,
        Test_Type__c != &apos;N/A&apos;,
        NOT(ISBLANK(Test_Type__c))
    ),
    AND(
        TEXT(FulfillmentOrder.Status) = &apos;Results Ready&apos;,
        TEXT(Status__c) = &apos;TNP&apos;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Results Ready?</label>
    <type>Checkbox</type>
</CustomField>