force-app/main/default/objects/FulfillmentOrderLineItem/fields/Return_Tracking_URL__c.field-meta.xml
<CustomField>
    <fullName>Return_Tracking_URL__c</fullName>
    <label>Return Tracking URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>