force-app/main/default/objects/FulfillmentOrderLineItem/fields/Shipment_Shipped_Date__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Shipped_Date__c</fullName>
    <description>Once the Shipment is Shipped, this Date is updates. This field is used to calculate the kit expiration date if MuleSoft not update the kit expiration date.
Note: Temporarily created as text , down the line it is formula field</description>
    <label>Shipment Shipped Date</label>
    <type>Date</type>
</CustomField>