force-app/main/default/objects/FulfillmentOrderLineItem/fields/Shipping_Provider__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Provider__c</fullName>
    <label>Shipping Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>