force-app/main/default/objects/FulfillmentOrderLineItem/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Approval</fullName>
                <default>true</default>
                <label>Pending Approval</label>
            </value>
            <value>
                <fullName>PA Acknowledged</fullName>
            </value>
            <value>
                <fullName>Waiting For Fulfillment</fullName>
            </value>
            <value>
                <fullName>Order Acknowledged</fullName>
            </value>
            <value>
                <fullName>Kit Shipped</fullName>
            </value>
            <value>
                <fullName>Kit Delivered</fullName>
            </value>
            <value>
                <fullName>Kit Activated</fullName>
            </value>
            <value>
                <fullName>PA Approved</fullName>
            </value>
            <value>
                <fullName>PA Rejected</fullName>
            </value>
            <value>
                <fullName>Kit PA Approved</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Sample Received</fullName>
            </value>
            <value>
                <fullName>DNA Extracted</fullName>
            </value>
            <value>
                <fullName>DNA Analyzed</fullName>
            </value>
            <value>
                <fullName>Pending Results</fullName>
            </value>
            <value>
                <fullName>Results Ready</fullName>
            </value>
            <value>
                <fullName>Order Complete</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>TNP</fullName>
            </value>
            <value>
                <fullName>DNA Extraction Failed</fullName>
                <isActive>false</isActive>
                <label>DNA Extraction Failed</label>
            </value>
            <value>
                <fullName>Kit PWN Approved</fullName>
                <isActive>false</isActive>
                <label>Kit PWN Approved</label>
            </value>
            <value>
                <fullName>PWN Acknowledged</fullName>
                <isActive>false</isActive>
                <label>PWN Acknowledged</label>
            </value>
            <value>
                <fullName>PWN Approved</fullName>
                <isActive>false</isActive>
                <label>PWN Approved</label>
            </value>
            <value>
                <fullName>PWN Rejected</fullName>
                <isActive>false</isActive>
                <label>PWN Rejected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>