force-app/main/default/objects/FulfillmentOrderLineItem/fields/Sync_To_PWN__c.field-meta.xml
<CustomField>
    <fullName>Sync_To_PWN__c</fullName>
    <formula>TEXT(Type) !=&apos;Delivery Charge&apos; &amp;&amp; OrderItemSummary.TestType__c!=&apos;PA&apos; &amp;&amp;  Quantity &gt;0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sync To PWN?</label>
    <type>Checkbox</type>
</CustomField>