force-app/main/default/objects/FulfillmentOrderLineItem/fields/Test_Taker_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Test_Taker_Customer_Id__c</fullName>
    <formula>IF(Test_Type__c = &apos;PSC&apos;, OrderItemSummary.customerID__c, IF(!ISBLANK(Customer_Id__c) , Customer_Id__c, OrderItemSummary.customerID__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Taker Customer Id</label>
    <type>Text</type>
</CustomField>