force-app/main/default/objects/FulfillmentOrderLineItem/fields/Test_Type__c.field-meta.xml
<CustomField>
    <fullName>Test_Type__c</fullName>
    <formula>OrderItemSummary.TestType__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Type</label>
    <type>Text</type>
</CustomField>