force-app/main/default/objects/FulfillmentOrderLineItem/fields/Verification_ID__c.field-meta.xml
<CustomField>
    <fullName>Verification_ID__c</fullName>
    <label>Verification ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>